--- a/disenioNuevo/views/index.ejs
+++ b/disenioNuevo/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Data UY Empleos</title>
+    <title>OchoHoras.uy</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='/stylesheets/main.css' />
